Se agregaron los cambios del reto 2

--- a/index.html
+++ b/index.html
@@ -13,15 +13,61 @@
   </header>
 
   <main>
+    <!-- <section>
+      <video 
+        type="video/webm"
+        controls
+        src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"
+      ></video>
+
+      <video controls>
+        <source 
+          type="video/webm"
+          src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"
+        >
+      </video>
+
+      <div class="videoWrapper">
+        <iframe 
+          width="560" height="349" 
+          src="https://www.youtube.com/embed/tgbNymZ7vqY" frameborder="0" allowfullscreen
+        ></iframe>
+      </div>
+    </section>
+
+
+    <section class="container_sectionPromo">
+      <video src="" controls></video>
+      
+      <article class="items-article">
+
+      </article>
+
+    </section> -->
+
+
+    <!-- section nueva -->
+
+    <section>
+      <video
+        controls
+        poster="https://cdn.videvo.net/videvo_files/video/premium/video0036/thumbnails/computer_code00_small.jpg"
+      >
+        <source
+          type="video/webm"
+          src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"
+        />
+        <source
+          type="video/mp4"
+          src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
+        />
+      </video>
+    </section>
+
+
 
   </main>
   
-  <section>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, eveniet!</p>
-  </section>
-
-  <footer>
-
-  </footer>
+  <footer></footer>
 </body>
 </html>
